[package]
name = "tissue"
version = "0.1.0"
edition = "2021"
exclude = ["examples/example.rs"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
chrono = "0.4.35"
color-eyre = "0.6.3"
regex = "^1.10.4"
reqwest = { version = "0.12.3", features = ["blocking", "json"] } 
serde = {version="1.0.197", features=["derive"]}
serde_json = "1.0.115"
tokio = {version="1.37", features=["full", "macros"]}

[features]
manual_reversible = []

